--- a/core-router/vyos/wireguard.j2
+++ b/core-router/vyos/wireguard.j2
@@ -1,4 +1,4 @@
-{% extends 'base.j2' %}
+{% extends 'base/base.j2' %}
 {% block content %}
 {% if wg_ifaces is defined -%}
 {% for wg_iface in wg_ifaces -%}
