--- a/core-router/vyos/service.j2
+++ b/core-router/vyos/service.j2
@@ -2,7 +2,7 @@
     {% if service=="ntp" -%}
         {% for allow-client in ntp.allow-clients -%}
 set service ntp allow-client address '{{ allow-client }}'
-        {% endfor }
+        {% endfor -%}
         {% for server in ntp.servers -%}
 set service ntp '{{ server }}'
         {% endfor -%}
