--- a/core-router/vyos/service.j2
+++ b/core-router/vyos/service.j2
@@ -1,6 +1,6 @@
 {% for service in services -%}
     {% if service == "ntp" -%}
-        {% for allow-client in ntp.allow-clients -%}
+        {% for allow-client in ntp['allow-clients'] -%}
 set service ntp allow-client address '{{ allow-client }}'
         {% endfor -%}
         {% for server in ntp.servers -%}
