--- a/core-router/vyos/service.j2
+++ b/core-router/vyos/service.j2
@@ -1,17 +1,17 @@
 {% for service in services -%}
 {{ service }}
-    {% if service == "ntp" -%}
+    {% if service == 'ntp' -%}
 test ntp
-        {% for allow_client in ntp['allow-clients'] -%}
+        {% for allow_client in service.allow_clients -%}
 set service ntp allow-client address '{{ allow_client }}'
         {% endfor -%}
-        {% for server in ntp.servers -%}
+        {% for server in service.servers -%}
 set service ntp '{{ server }}'
         {% endfor -%}
-    {% elif service == "ssh" -%}
+    {% elif service == 'ssh' -%}
 test ssh
-set service ssh port '{{ ssh.port }}'
-set service ssh vrf '{{ ssh.vrf }}'
+set service ssh port '{{ service.port }}'
+set service ssh vrf '{{ service.vrf }}'
     {% endif -%}
 {% endfor -%}
 test
