--- a/core-router/vyos/core-router.j2
+++ b/core-router/vyos/core-router.j2
@@ -9,6 +9,11 @@
         {% endfor -%}
     {% endif -%}
 {% endblock -%}
+{% block policies %}
+    {% if policies is defined %}
+        {% include 'core-router/vyos/policies.j2' %}
+    {% endif %}
+{% endblock %}
 {% block services -%}
     {% include 'core-router/vyos/service.j2' -%}
 {% endblock -%}
