--- a/core-router/vyos/policies.j2
+++ b/core-router/vyos/policies.j2
@@ -1,9 +1,8 @@
 {% extends 'base/base.j2' -%}
 {% block policies -%}
     {% for p in policies %}
-        {{ p }}
         {% if prefix_lists is defined %}
-            {{ prefix_lists }}
+            {{ p.prefix_lists }}
             {% include 'core-router/vyos/prefix_lists.j2' -%}
         {% endif %}
         {% if p == "route_maps" -%}
