--- a/core-router/vyos/policies.j2
+++ b/core-router/vyos/policies.j2
@@ -3,9 +3,8 @@
     {% for p in policies %}
         {{ p }}
         {{ p.prefix_lists }}
-        {% if p == "prefix_lists" %}
+        {% if p.prefix_lists is defined %}
             prefix_lists vorhanden
-            {{ p.prefix_list }}
             {% include 'core-router/vyos/prefix_lists.j2' -%}
         {% endif %}
         {% if p == "route_maps" -%}
