--- a/core-router/vyos/route_maps.j2
+++ b/core-router/vyos/route_maps.j2
@@ -1,4 +1,4 @@
-#jinja2: lstrip_blocks: True
+"#jinja2: lstrip_blocks: True"
 {% for rm in p.route_maps -%}
 set policy route-map {{ rm.route_map }} description {{ rm.description }}
     {% for r in rm.rules -%}
