--- a/core-router/vyos/policies.j2
+++ b/core-router/vyos/policies.j2
@@ -2,10 +2,10 @@
 {% block policies -%}
 {% for p in policies %}
 {% if p.prefix_lists is defined %}
-{% include 'core-router/vyos/prefix_lists.j2' -%}
+{%- include 'core-router/vyos/prefix_lists.j2' -%}
 {% endif %}
 {% if p.route_maps is defined -%}
-{% include 'core-router/vyos/route_maps.j2' -%}
+{%- include 'core-router/vyos/route_maps.j2' -%}
 {% endif -%}
 {% endfor -%}
 {% endblock -%}
