--- a/core-router/vyos/policies.j2
+++ b/core-router/vyos/policies.j2
@@ -7,5 +7,5 @@
 {% if p.route_maps is defined -%}
 {%- include 'core-router/vyos/route_maps.j2' -%}
 {% endif -%}
-{% endfor -%}
+{%- endfor -%}
 {%- endblock -%}
