--- a/core-router/vyos/policies.j2
+++ b/core-router/vyos/policies.j2
@@ -1,11 +1,11 @@
-{% extends 'base/base.j2' -%}
+{%- extends 'base/base.j2' -%}
 {%- block policies -%}
-{% for p in policies %}
-{% if p.prefix_lists is defined %}
+{%- for p in policies -%}
+{%- if p.prefix_lists is defined -%}
 {%- include 'core-router/vyos/prefix_lists.j2' -%}
-{% endif %}
-{% if p.route_maps is defined -%}
+{%- endif -%}
+{%- if p.route_maps is defined -%}
 {%- include 'core-router/vyos/route_maps.j2' -%}
-{% endif -%}
+{%- endif -%}
 {%- endfor -%}
 {%- endblock -%}
