--- a/core-router/vyos/core-router.j2
+++ b/core-router/vyos/core-router.j2
@@ -2,11 +2,11 @@
 {% block interfaces -%}
     {% for interface in device.interfaces.all() -%}
         {% include 'core-router/vyos/interface.j2' -%}
-    {% endfor -%}
+    {%- endfor -%}
     {% if wg_ifaces is defined -%}
         {% for wg_iface in wg_ifaces -%}
             {% include 'core-router/vyos/wireguard.j2' -%}
-        {% endfor -%}
+        {%- endfor -%}
     {% endif -%}
 {% endblock -%}
 {% block policies %}
