--- a/base/base.j2
+++ b/base/base.j2
@@ -1,3 +1,3 @@
-{% block interfaces %}{% endblock %}
-{% block policies %}{% endblock %}
-{% block services %}{% endblock %}
+{%- block interfaces -%}{%- endblock -%}
+{%- block policies -%}{%- endblock -%}
+{%- block services -%}{%- endblock -%}
