--- a/core-router/vyos/policies.j2
+++ b/core-router/vyos/policies.j2
@@ -1,4 +1,4 @@
-{%- extends 'base/base.j2' -%}
+{% extends 'base/base.j2' %}
 {%- block policies -%}
 {%- for p in policies -%}
 {%- if p.prefix_lists is defined -%}
