--- a/core-router/vyos/route_maps.j2
+++ b/core-router/vyos/route_maps.j2
@@ -1,5 +1,5 @@
 {% for rm in p.route_maps -%}
-set policy route-map {{ rm.route_map }} description {{ rm.description }}
+hallo set policy route-map {{ rm.route_map }} description {{ rm.description }}
 {% for r in rm.rules -%}
 set policy route-map {{ rm.route_map }} rule {{ r.rule }} action {{ r.action }}
 {% if r.match is defined -%}
