--- a/core-router/vyos/prefix_lists.j2
+++ b/core-router/vyos/prefix_lists.j2
@@ -9,4 +9,4 @@ set policy prefix-list {{ pl.prefix_list }} rule {{ r.rule }} ge {{ r.ge }}
 set policy prefix-list {{ pl.prefix_list }} rule {{ r.rule }} prefix {{ pfx }}                    
 {%- endfor -%}
 {%- endfor -%}
-{%- endfor -%}  
+{%- endfor %}  
