--- a/core-router/vyos/policies.j2
+++ b/core-router/vyos/policies.j2
@@ -6,6 +6,6 @@
 {% endif %}
 {% if p.route_maps is defined %}
 {% include 'core-router/vyos/route_maps.j2' %}
-{% endif -%}
+{%- endif -%}
 {%- endfor -%}
 {% endblock -%}
