--- a/core-router/vyos/policies.j2
+++ b/core-router/vyos/policies.j2
@@ -5,7 +5,7 @@
 {% include 'core-router/vyos/prefix_lists.j2' %}
 {% endif %}
 {% if p.route_maps is defined %}
-{% include 'core-router/vyos/route_maps.j2' %}
-{%- endif -%}
+{% include 'core-router/vyos/route_maps.j2' -%}
+{% endif -%}
 {%- endfor -%}
 {% endblock -%}
