template struktur angepasst, routing hinzugefügt

--- a/base/base.j2
+++ b/base/base.j2
@@ -1,3 +1,4 @@
 {%- block interfaces -%}{%- endblock -%}
 {%- block policies -%}{%- endblock -%}
+{%- block routing -%}{%- endblock -%}
 {%- block services -%}{%- endblock -%}
