--- a/core_router/vyos/core_router.j2
+++ b/core_router/vyos/core_router.j2
@@ -15,7 +15,7 @@
     {%- endif -%}
 {%- endblock -%}
 {%- block routing -%}
-    {%- if routing is defined -%}
+    {%- if routing_protocols is defined -%}
         {%- include 'core_router/vyos/routing.j2' -%}
     {%- endif -%}
 {%- endblock -%}
