--- a/core_router/vyos/routing_bgp.j2
+++ b/core_router/vyos/routing_bgp.j2
@@ -1,5 +1,6 @@
 {# bgp #}
     {# parameters #}
+in routing bgp igp
 set protocols bgp parameters router-id '{{ r.bgp.router_id }}'
 set protocols bgp system-as '{{ r.bgp.as }}'
     {# 'global' afis #}
