--- a/core_router/vyos/routing.j2
+++ b/core_router/vyos/routing.j2
@@ -1,10 +1,8 @@
 {% extends 'base/base.j2' %}
 {% block routing %}
-in block routing
 {% for rp in routing_protocols -%}
 {% if rp.protocol == "bgp" -%}
-{{ rp.as }}
 {% include 'core_router/vyos/routing_bgp.j2' -%}
 {% endif -%}
 {%- endfor -%}
-{% endblock -%}
+{% endblock %}
