--- a/core_router/vyos/interface.j2
+++ b/core_router/vyos/interface.j2
@@ -3,4 +3,4 @@
 set interfaces ethernet {{ interface }} address '{{ ip.address }}'
 {% endif -%}
 {% endfor -%}
-{{ device.interface.find('name', 'lo').ip_addresses.first.ip }}
+{{ device.interfaces.find('name', 'lo').ip_addresses.first.ip }}
