--- a/core_router/vyos/interface.j2
+++ b/core_router/vyos/interface.j2
@@ -1,6 +1,6 @@
 {% for ip in interface.ip_addresses.all() -%}
+{{ ip.address }}
 {% if interface.type == "1000base-t" or interface.type == "10gbase-t" -%}
 set interfaces ethernet {{ interface }} address '{{ ip.address }}'
 {% endif -%}
 {% endfor -%}
-{{ device.interfaces.lo.ip_addresses.first.ip }}
