--- a/core_router/vyos/interface.j2
+++ b/core_router/vyos/interface.j2
@@ -7,3 +7,4 @@ set interfaces ethernet {{ interface }} address '{{ ip.address }}'
 ip ist {{ loopback2 }}
 {% endif %}
 {% endfor -%}
+{{ loopback2 }} ausserhalb block, code-block whatever
