--- a/core_router/vyos/routing_bgp.j2
+++ b/core_router/vyos/routing_bgp.j2
@@ -46,3 +46,4 @@ set protocols bgp neighbor {{ n.ipv4_address }} address-family {{ af.afi }} rout
 {% endfor -%}
 {% endif %}
 {% endfor -%}
+test22 ist {{ test22 }}
