router_id_address

--- a/core_router/vyos/routing_bgp.j2
+++ b/core_router/vyos/routing_bgp.j2
@@ -47,3 +47,4 @@ set protocols bgp neighbor {{ n.ipv4_address }} address-family {{ af.afi }} rout
 {% endif %}
 {% endfor -%}
 test22 ist {{ test22 }}
+router_id_address ist {{ router_id_address }}
