--- a/core_router/vyos/routing.j2
+++ b/core_router/vyos/routing.j2
@@ -1,9 +1,15 @@
 {% extends 'base/base.j2' %}
 {% block routing %}
+{% for interface in device.interfaces.all() %}
+{% if interface.name == "lo" %}
+{% for ip in interface.ip_addresses.all() %}
+{% set router_id_address = {{ ip.address }}%}
+{% endfor %}
+{% endif %}
+{% endfor %}
 {% for rp in routing_protocols %}
 {% if rp.protocol == "bgp" -%}
 {% include 'core_router/vyos/routing_bgp.j2' -%}
 {% endif %}
 {%- endfor -%}
-{{ loopback2 }}
 {% endblock %}
