--- a/core_router/vyos/routing.j2
+++ b/core_router/vyos/routing.j2
@@ -4,6 +4,7 @@
 {% if interface.name == "lo" %}
 {% for ip in interface.ip_addresses.all() %}
 {% set router_id_address = "{{ ip.address }}" %}
+router_id_address ist {{ router_id_address }} in routing.j2
 {% endfor %}
 {% endif %}
 {% endfor %}
