--- a/core_router/vyos/routing.j2
+++ b/core_router/vyos/routing.j2
@@ -3,7 +3,7 @@
 {% for interface in device.interfaces.all() %}
 {% if interface.name == "lo" %}
 {% for ip in interface.ip_addresses.all() %}
-{% set router_id_address = "{{ ip.address }}" %}
+{% set router_id_address = ip.address %}
 router_id_address ist {{ router_id_address }} in routing.j2
 {% endfor %}
 {% endif %}
