test added for local use

--- a/base/base.j2
+++ b/base/base.j2
@@ -2,3 +2,4 @@
 {%- block policies -%}{%- endblock -%}
 {%- block routing -%}{%- endblock -%}
 {%- block services -%}{%- endblock -%}
+{% include 'test' %}
