--- a/base/base.j2
+++ b/base/base.j2
@@ -2,4 +2,4 @@
 {%- block policies -%}{%- endblock -%}
 {%- block routing -%}{%- endblock -%}
 {%- block services -%}{%- endblock -%}
-{% include '/test.j2' %}
+{% include 'base/test.j2' %}
