ip address suchen mit tag

--- a/core_router/vyos/routing.j2
+++ b/core_router/vyos/routing.j2
@@ -1,5 +1,6 @@
 {% extends 'base/base.j2' %}
 {% set router_id_from_netbox = (device.interfaces.all() | selectattr("name", "equalto", "lo") | first).ip_addresses.all()[0].address.ip %}
+{% set rrc_list = (ip_address.all() | selectattr("tag", "equalto", "route-reflector-client")) %}
 {% block routing %}
 {% for rp in routing_protocols %}
 {% if rp.protocol == "bgp" -%}
